--- a/cv.html
+++ b/cv.html
@@ -1093,6 +1093,21 @@
       <div class="property">Date:</div><div class="value">12th to 16th of December of 2022</div>
     </div>
 
+    <span id="5SIAMTXLAminisymposium"></span>
+     <br/><div class="cv">
+     <div class="year"></div><div class="title">
+     <h4>&emsp;Mini-Symposium <em>Applications and Computation in Algebraic Geometry</em></h4></div>
+     <!--<div class="year"></div><div class="title">
+     <h4>&ensp;&emsp;<em>(Minisimposio <em>Computaci&oacute;n y Aplicaciones en Geometr&iacute;a Algebraica</em>)</em></h4></div>-->
+     <div class="year"></div><div class="title">
+     <h4>&#160;&#160;at the <a href="#5SIAMTXLA">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+     <div class="pretalktitle"></div><div class="talktitle">Co-organizer</div>
+       <div class="property">Description:</div><div class="value">2 sessions and 8 talks</div>
+       <div class="property">Organizer:</div><div class="value"><a href="https://jordylopez27.github.io/">Jordy Lopez Garcia</a>, Josu&eacute; Tonelli-Cueto, and <a href="https://tjyahl.github.io/">Thomas Yahl</a></div>
+       <div class="property">Location:</div><div class="value">Houston, USA</div>
+       <div class="property">Date:</div><div class="value">4th to 6th of November of 2022</div>
+     </div>
+
    <span id="rsme2022sesionespecial"></span>
     <br/><div class="cv">
     <div class="year"></div><div class="title">
@@ -1801,6 +1816,27 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Date:</div><div class="value">12th to 16th of December of 2022</div>
 </div>
 
+<span id="4thBYMAT"></span>
+<br/><div class="cv">
+<div class="year"></div><div class="title">
+<h4>&emsp;<a href="https://web.archive.org/web/20201129213548/https://bymat.webs.upv.es/index/">4th BYMAT Conference</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Elena L&oacute;pez Navarro, Carlos Andreu Villaroig, Vicente Jos&eacute; Bevia Escrig, Sorina Madalina Sferle, Ana Navarro Quiles, and Cristina P&eacute;rez Diukina</div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uv.es/">Universitat de Val&egrave;ncia</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Polit&egrave;cnica de Val&egrave;ncia</a></div>
+  <div class="property">Location:</div><div class="value">Valencia, Spain (On-line)</div>
+  <div class="property">Date:</div><div class="value">9th to 11th of November of 2022</div>
+</div>
+
+<span id="5SIAMTXLA"></span>
+<br/><div class="cv">
+<div class="year"></div><div class="title">
+<h4>&emsp;<a href="https://www.math.uh.edu/siamtxla22/index.shtml">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="https://siam.org/">Society for Industrial and Applied Mathematics (SIAM)</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uh.edu/">University of Houston</a></div>
+  <div class="property">Location:</div><div class="value">Houston, USA</div>
+  <div class="property">Date:</div><div class="value">4th to 6th of November of 2022</div>
+</div>
+
 <span id="8IMM"></span>
 <br/><div class="cv">
 <div class="year"></div><div class="title">
@@ -1810,6 +1846,18 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.us.es/">Universidad de Sevilla</a></div>
   <div class="property">Location:</div><div class="value">Sevilla, Spain</div>
   <div class="property">Date:</div><div class="value">5th to 7th of October of 2022</div>
+</div>
+
+<span id="TAGS2022"></span>
+<br/><div class="cv">
+<div class="year"></div><div class="title">
+<h4>&emsp;<a href="https://www.math.tamu.edu/~sottile/conferences/TAGS22/index.html">2022 Texas Algebraic Geometry Symposium</a></h4></div>
+  <div class="property">Organizer:</div><div class="value"><a href="https://www.rice.edu/">Rice University</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.utexas.edu/">University of Texas at Austin</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+  <div class="property">Location:</div><div class="value">College Station, USA</div>
+  <div class="property">Date:</div><div class="value">30th of September to 2nd of October of 2022</div>
 </div>
 
 <span id="Santalo2022"></span>
@@ -1946,7 +1994,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2020</h4>
 </div><div class="title">
-<h4>&emsp;<a href="https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
+<h4>&emsp;<a href="https://web.archive.org/web/20201129213548/https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Ana Navarro Quiles, Eva Primo T&aacute;rraga, Clara Burgos Sim&oacute;n, David Mart&iacute;nez Rodr&iacute;guez, Elena L&oacute;pez Navarro, Alberto Espuny D&iacute;az, Miguel Reula Mart&iacute;n, Jos&eacute; Alberto Conejero Casares and Patricio Almir&oacute;n Cuadros</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.uv.es/">Universitat de Val&egrave;ncia</a></div>
   <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Polit&egrave;cnica de Val&egrave;ncia</a></div>
@@ -2582,13 +2630,36 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 
       <!-- 2022
-           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+      YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+      <span id="SAPRF2022"></span>
+      <br/><div class="cv">
+      <div class="year">
+      <h4>2022</h4>
+      </div><div class="title">
+      <h4>&emsp;<a href="https://opa.uthscsa.edu/SAPRF-Home">10th Annual San Antonio Postdoctoral Research Forum</a></h4></div>
+        <div class="property">Organizer:</div><div class="value"><a href="https://www.med.navy.mil/Naval-Medical-Research-Center/R-D-Commands/Naval-Medical-Research-Unit-San-Antonio-TX/">Naval Medical Research Unit San Antonio (NAMRU-SA)</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.txbiomed.org/">Texas Biomedical Research Institute (Texas BioMed)</a></div>
+        <div class="property"></div><div class="value"><a href="https://usaisr.amedd.army.mil/">United States Army Institute of Surgical Research (USAISR)</a></div>
+        <div class="property"></div><div class="value"><a href="https://uthscsa.edu/">UT Health San Antonio</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.utsa.edu/">University of Texas at San Antonio (UTSA)</a></div>
+        <div class="property">Hosting Institution:</div><div class="value"><a href="https://uthscsa.edu/">UT Health San Antonio</a></div>
+        <div class="property">Location:</div><div class="value">San Antonio, USA</div>
+        <div class="property">Date:</div><div class="value">20th of September of 2022</div>
+      </div>
+
+       <!--<br/><div class="cv">
+       <div class="year"></div><div class="title">
+       <h4><a href="https://www.stlpi.org/fingert-22/">&emsp;2022 Hyman Fingert Lecture &ldquo;Controversies in Treating Transgender Children and Adolescents&rdquo;</a></h4></div>
+         <div class="property">Organizer:</div><div class="value"><a href="https://www.stlpi.org/">Saint Louis Psychoanalytic Institute</a></div>
+         <div class="property">Lecturer:</div><div class="value"><a href="https://jackdreschermd.net/">Jacl Drescher</a></div>
+         <div class="property">Location:</div><div class="value">St. Louis, USA. (On-line)</div>
+         <div class="property">Date:</div><div class="value">15th of September of 2022</div>
+       </div>-->
 
        <span id="teatroespanolaparis_espectaculo"></span>
        <br/><div class="cv">
-       <div class="year">
-         <h4>2022</h4>
-       </div><div class="title">
+       <div class="year"></div><div class="title">
        <h4>&emsp;<a href="../teatroespanolaparis2022.html">dramaTOURgia: un viaje teatral a trav&eacute;s de Espa&ntilde;a</a><span style="float:right;"><a href="../teatroespanolaparis2022.html">Website</a></span></h4></div>
          <div class="property">Description:</div><div class="value">End-of-course representation showcasing scenes worked during the course <i>Teatro Espa&ntilde;ol &agrave; Paris</i></div>
          <div class="property">Director:</div><div class="value">Luz&iacute;a Eviza</div>
@@ -2599,7 +2670,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
         <span id="teatroespanolaparis"></span>
         <br/><div class="cv">
-        <div class="year"></div><div class="title">
+        <div class="year">
+        <h4>2020-22</h4>
+        </div><div class="title">
         <h4>&emsp;<a href="https://www.facebook.com/teatroespanolaparis">Teatro Espa&ntilde;ol &agrave; Paris</a></h4></div>
           <div class="property">Description:</div><div class="value">Once-a-week theater classes in Spanish</div>
           <div class="property">Instructor:</div><div class="value">Luz&iacute;a Eviza</div>
@@ -2615,6 +2688,17 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
            <div class="property">Hosting Institution:</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
            <div class="property">Location:</div><div class="value">Troms&oslash;, Norway</div>
            <div class="property">Date:</div><div class="value">8th to 9th of June of 2022</div>
+         </div>
+
+         <br/><div class="cv">
+         <div class="year"></div><div class="title">
+         <h4>&emsp;Taller &ldquo;Bater&iacute;as: Presente y Futuro&rdquo;</h4></div>
+         <div class="year"></div><div class="title">
+         <h4>&ensp;&emsp;<em>(Workshop &ldquo;Bateries: Present and Future&rdquo;)</em></h4></div>
+           <div class="property">Organizer:</div><div class="value"><a href="https://www.ehu.eus/es/web/ehualumni">EHUalumni</a></div>
+           <div class="property">Lecturer:</div><div class="value"><a href="https://cicenergigune.com/en/jon-serrano-sevillano">Jon Serrano-Sevillano</a></div>
+           <div class="property">Location:</div><div class="value">On-line</div>
+           <div class="property">Date:</div><div class="value">11th of May of 2022</div>
          </div>
 
       <!-- 2021
@@ -2738,9 +2822,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       </div>
 
       <br/><div class="cv">
-      <div class="year">
-
-      </div><div class="title">
+      <div class="year"></div><div class="title">
       <h4>&emsp;Curso &ldquo;Cognici&oacute;n compararada entre chimpanc&eacute;s y humanos&rdquo;</h4></div>
       <div class="year"></div><div class="title">
       <h4>&ensp;&emsp;<em>(&ldquo;Compared cognition between chimpanzees and humans&rdquo; Course)</em></h4></div>
