--- a/cv_es.html
+++ b/cv_es.html
@@ -1073,9 +1073,9 @@
     <h4>&#160;&#160;en los <a href="#JMM2023">Joint Mathematics Meetings 2023</a></h4></div>
     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
       <div class="property">Descripci&oacute;n:</div><div class="value">2 sessions and 16 talks</div>
-      <div class="property">Organizador:</div><div class="value"><a href="https://www.hiteshgakhar.com/">Hitesh Gakhar</a>, <a href="https://www.math.ucla.edu/~harlin/">Harlin Lee</a>, and Josu&eacute; Tonelli-Cueto</div>
+      <div class="property">Organizador:</div><div class="value"><a href="https://www.hiteshgakhar.com/">Hitesh Gakhar</a>, <a href="https://www.math.ucla.edu/~harlin/">Harlin Lee</a>, y Josu&eacute; Tonelli-Cueto</div>
       <div class="property">Lugar:</div><div class="value">Boston, Massachusetts, USA</div>
-      <div class="property">Fecha:</div><div class="value">4th to 7th of January of 2023</div>
+      <div class="property">Fecha:</div><div class="value">del 4 al 7 de enero del 2023</div>
     </div>
 
    <span id="RSMEUMA2022sesionespecial"></span>
@@ -1087,11 +1087,26 @@
     <div class="year"></div><div class="title">
     <h4>&#160;&#160;en el <a href="#RSMEUMA2022">II Encuentro RSME-UMA</a></h4></div>
     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
-      <div class="property">Descripci&oacute;n:</div><div class="value">3 sessions and 12 talks</div>
-      <div class="property">Organizador:</div><div class="value"><a href="http://mate.dm.uba.ar/~alidick/">Alicia Dickenstein</a>, <a href="http://mate.dm.uba.ar/~jeronimo/">Gabriela Jer&oacute;nimo</a>, <a href="https://sites.google.com/view/beatrizpascualescudero/">Beatriz Pascual Escudero</a>, and Josu&eacute; Tonelli-Cueto</div>
-      <div class="property">Lugar:</div><div class="value">Ronda, Spain</div>
-      <div class="property">Fecha:</div><div class="value">12th to 16th of December of 2022</div>
+      <div class="property">Descripci&oacute;n:</div><div class="value">3 sesiones y 12 charlas</div>
+      <div class="property">Organizador:</div><div class="value"><a href="http://mate.dm.uba.ar/~alidick/">Alicia Dickenstein</a>, <a href="http://mate.dm.uba.ar/~jeronimo/">Gabriela Jer&oacute;nimo</a>, <a href="https://sites.google.com/view/beatrizpascualescudero/">Beatriz Pascual Escudero</a>, y Josu&eacute; Tonelli-Cueto</div>
+      <div class="property">Lugar:</div><div class="value">Ronda, Espa&ntilde;a</div>
+      <div class="property">Fecha:</div><div class="value">del 12 al 16 de diciembre del 2022</div>
     </div>
+
+    <span id="5SIAMTXLAminisymposium"></span>
+     <br/><div class="cv">
+     <div class="year"></div><div class="title">
+     <h4>&emsp;Mini-Symposium <em>Applications and Computation in Algebraic Geometry</em></h4></div>
+     <div class="year"></div><div class="title">
+     <h4>&ensp;&emsp;<em>(Minisimposio <em>Computaci&oacute;n y Aplicaciones en Geometr&iacute;a Algebraica</em>)</em></h4></div>
+     <div class="year"></div><div class="title">
+     <h4>&#160;&#160;en el <a href="#5SIAMTXLA">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
+       <div class="property">Descrici&oacute;n:</div><div class="value">2 sesiones y 8 charlas</div>
+       <div class="property">Organizador:</div><div class="value"><a href="https://jordylopez27.github.io/">Jordy Lopez Garcia</a>, Josu&eacute; Tonelli-Cueto, y <a href="https://tjyahl.github.io/">Thomas Yahl</a></div>
+       <div class="property">Lugar:</div><div class="value">Houston, EEUU</div>
+       <div class="property">Fecha:</div><div class="value">del 4 al 6 de noviembre del 2022</div>
+     </div>
 
    <span id="rsme2022sesionespecial"></span>
     <br/><div class="cv">
@@ -1103,7 +1118,7 @@
     <h4>&#160;&#160;en el <a href="#rsme2022">Congreso Bienal de la Real Sociedad Matem&aacute;tica Espa&ntilde;ola 2022</a></h4></div>
     <div class="pretalktitle"></div><div class="talktitle">Co-organizador</div>
       <div class="property">Descripci&oacute;n:</div><div class="value">4 sesiones y 16 charlas</div>
-      <div class="property">Organizador:</div><div class="value"><a href="https://laurabmo.xyz/">Laura Brustenga i Moncus&iacute;, <a href="https://roserhp.github.io/">Roser Homs</a>, y Josu&eacute; Tonelli-Cueto</a></div>
+      <div class="property">Organizador:</div><div class="value"><a href="https://laurabmo.xyz/">Laura Brustenga i Moncus&iacute;</a>, <a href="https://roserhp.github.io/">Roser Homs</a>, y Josu&eacute; Tonelli-Cueto</div>
       <div class="property">Lugar:</div><div class="value">Ciudad Real, Espa&ntilde;a (H&iacute;brido por la COVID-19)</div>
       <div class="property">Fecha:</div><div class="value">del 17 al 21 de enero del 2022</div>
     </div>
@@ -1817,9 +1832,34 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <h4>&emsp;<a href="http://www.rsmeuma2022.uma.es/">II Encuentro RSME-UMA</a></h4></div>
      <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
      <div class="property"></div><div class="value"><a href="http://www.union-matematica.org.ar/">Uni&oacute;n Matem&aacute;tica Argentina (UMA)</a></div>
-     <div class="property">Instituci&oacute;n anfitriona::</div><div class="value"><a href="https://www.uma.es/">Universidad de M&aacute;laga</a></div>
+     <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.uma.es/">Universidad de M&aacute;laga</a></div>
      <div class="property">Lugar:</div><div class="value">Ronda, Espa&ntilde;a</div>
      <div class="property">Fecha:</div><div class="value">del 12 al 16 de diciembre del 2022</div>
+   </div>
+
+   <span id="4thBYMAT"></span>
+   <br/><div class="cv">
+   <div class="year"></div><div class="title">
+   <h4>&emsp;<a href="https://web.archive.org/web/20201129213548/https://bymat.webs.upv.es/index/">4th BYMAT Conference</a></h4></div>
+   <div class="year"></div><div class="title">
+   <h4>&ensp;&emsp;<em>(4&ordf; Conferencia BYMAT)</em></h4></div>
+     <div class="property">Organizador:</div><div class="value">Elena L&oacute;pez Navarro, Carlos Andreu Villaroig, Vicente Jos&eacute; Bevia Escrig, Sorina Madalina Sferle, Ana Navarro Quiles, and Cristina P&eacute;rez Diukina</div>
+     <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.uv.es/">Universitat de Val&egrave;ncia</a></div>
+     <div class="property"></div><div class="value"><a href="https://www.upv.es/">Universitat Polit&egrave;cnica de Val&egrave;ncia</a></div>
+     <div class="property">Lugar:</div><div class="value">Valencia, Espa&ntilde;a (On-line)</div>
+     <div class="property">Date:</div><div class="value">del 9 al 11 de noviembre del 2022</div>
+   </div>
+
+   <span id="5SIAMTXLA"></span>
+   <br/><div class="cv">
+   <div class="year"></div><div class="title">
+   <h4>&emsp;<a href="https://www.math.uh.edu/siamtxla22/index.shtml">5th Annual Meeting of the SIAM Texas-Louisiana Section</a></h4></div>
+   <div class="year"></div><div class="title">
+   <h4>&ensp;&emsp;<em>(5&ordf; Reuni&oacute;n Anual de la Secci&oacute;n Texas-Louisiana de SIAM)</em></h4></div>
+     <div class="property">Organizador:</div><div class="value"><a href="https://siam.org/">Society for Industrial and Applied Mathematics (SIAM)</a></div>
+     <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.uh.edu/">University of Houston</a></div>
+     <div class="property">Lugar:</div><div class="value">Houston, EEUU</div>
+     <div class="property">Fecha:</div><div class="value">del 4 al 6 de noviembre del 2022</div>
    </div>
 
    <span id="8IMM"></span>
@@ -1827,12 +1867,26 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year"></div><div class="title">
    <h4>&emsp;<a href="http://congreso.us.es/sevilla8imm/">8th Iberian Mathematical Meeting</a></h4></div>
    <div class="year"></div><div class="title">
-   <h4>&ensp;&emsp;<em>(8º Encuentro Matem&aacute;tico Ib&eacute;rico)</em></h4></div>
+   <h4>&ensp;&emsp;<em>(8&ordm; Encuentro Matem&aacute;tico Ib&eacute;rico)</em></h4></div>
      <div class="property">Organizador:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
      <div class="property"></div><div class="value"><a href="https://www.spm.pt/">Sociedade Portuguesa de Matem&aacute;tica (SPM)</a></div>
      <div class="property">Instituci&oacute;n Anfitriona:</div><div class="value"><a href="https://www.us.es/">Universidad de Sevilla</a></div>
      <div class="property">Lugar:</div><div class="value">Sevilla, Espa&ntilde;a</div>
      <div class="property">Fecha:</div><div class="value">del 5 al 7 de octubre del 2022</div>
+   </div>
+
+   <span id="TAGS2022"></span>
+   <br/><div class="cv">
+   <div class="year"></div><div class="title">
+   <h4>&emsp;<a href="https://www.math.tamu.edu/~sottile/conferences/TAGS22/index.html">2022 Texas Algebraic Geometry Symposium</a></h4></div>
+   <div class="year"></div><div class="title">
+   <h4>&ensp;&emsp;<em>(Simposio de Texas en Geometr&iacute;a Algebraica 2022)</em></h4></div>
+     <div class="property">Organizador:</div><div class="value"><a href="https://www.rice.edu/">Rice University</a></div>
+     <div class="property"></div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+     <div class="property"></div><div class="value"><a href="https://www.utexas.edu/">University of Texas at Austin</a></div>
+     <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.tamu.edu/">Texas A&M University</a></div>
+     <div class="property">Lugar</div><div class="value">College Station, EEUU</div>
+     <div class="property">Fecha:</div><div class="value">del 30 de septiembre al 2 de octubre del 2022</div>
    </div>
 
    <span id="Santalo2022"></span>
@@ -1842,7 +1896,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
    <div class="year"></div><div class="title">
    <h4>&ensp;&emsp;<em>(XXI Escuela Llu&iacute;s Santal&oacute;: Configuraciones Aleatorias y Deterministas de Puntos)</em></h4></div>
      <div class="property">Organizador:</div><div class="value"> Carlos Beltr&aacute;n and Jordi Marzo</div>
-     <div class="property">Instituci&oacute;n anfitriona::</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
+     <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://www.rsme.es/">Real Sociedad Matem&aacute;tica Espa&ntilde;ola (RSME)</a></div>
      <div class="property"></div><div class="value"><a href="http://www.uimp.es/">Universidad Internacional Men&eacute;ndez Pelayo (UIMP)</a></div>
      <div class="property">Lugar:</div><div class="value">Santander, Espa&ntilde;a</div>
      <div class="property">Fecha:</div><div class="value">del 11 al 15 de julio del 2022</div>
@@ -1987,7 +2041,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year">
 <h4>2020</h4>
 </div><div class="title">
-<h4>&emsp;<a href="https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
+<h4>&emsp;<a href="https://web.archive.org/web/20201129213548/https://bymat.webs.upv.es/index/">3rd BYMAT Conference</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(3&ordf; Conferencia BYMAT)</em></h4></div>
   <div class="property">Organizador:</div><div class="value">Ana Navarro Quiles, Eva Primo T&aacute;rraga, Clara Burgos Sim&oacute;n, David Mart&iacute;nez Rodr&iacute;guez, Elena L&oacute;pez Navarro, Alberto Espuny D&iacute;az, Miguel Reula Mart&iacute;n, Jos&eacute; Alberto Conejero Casares y Patricio Almir&oacute;n Cuadros</div>
@@ -2683,13 +2737,40 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       </div></div>
 
       <!-- 2022
-           YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+        YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+        <span id="SAPRF2022"></span>
+        <br/><div class="cv">
+        <div class="year">
+            <h4>2022</h4>
+        </div><div class="title">
+        <h4>&emsp;<a href="https://opa.uthscsa.edu/SAPRF-Home">10th Annual San Antonio Postdoctoral Research Forum</a></h4></div>
+        <div class="year"></div><div class="title">
+        <h4>&ensp;&emsp;<em>(10&ordm; Foro de Investigación Postdoctoral Anual de San Antonio)</em></h4></div>
+          <div class="property">Organizador:</div><div class="value"><a href="https://www.med.navy.mil/Naval-Medical-Research-Center/R-D-Commands/Naval-Medical-Research-Unit-San-Antonio-TX/">Naval Medical Research Unit San Antonio (NAMRU-SA)</a></div>
+          <div class="property"></div><div class="value"><a href="https://www.txbiomed.org/">Texas Biomedical Research Institute (Texas BioMed)</a></div>
+          <div class="property"></div><div class="value"><a href="https://usaisr.amedd.army.mil/">United States Army Institute of Surgical Research (USAISR)</a></div>
+          <div class="property"></div><div class="value"><a href="https://uthscsa.edu/">UT Health San Antonio</a></div>
+          <div class="property"></div><div class="value"><a href="https://www.utsa.edu/">University of Texas at San Antonio (UTSA)</a></div>
+          <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://uthscsa.edu/">UT Health San Antonio</a></div>
+          <div class="property">Lugar:</div><div class="value">San Antonio, EEUU</div>
+          <div class="property">Fecha:</div><div class="value">20 de septiembre del 2022</div>
+        </div>
+
+        <!--<br/><div class="cv">
+        <div class="year"></div><div class="title">
+        <h4><a href="https://www.stlpi.org/fingert-22/">&emsp;2022 Hyman Fingert Lecture &ldquo;Controversies in Treating Transgender Children and Adolescents&rdquo;</a></h4></div>
+        <div class="year"></div><div class="title">
+        <h4>&ensp;&emsp;<em>(Ponencia Hyman Fingert 2022 &ldquo;Controversias en el Tratamiento de la Infancia y Adolecencia Trans&rdquo;)</em></h4></div>
+          <div class="property">Organizador:</div><div class="value"><a href="https://www.stlpi.org/">Saint Louis Psychoanalytic Institute</a></div>
+          <div class="property">Ponente:</div><div class="value"><a href="https://jackdreschermd.net/">Jacl Drescher</a></div>
+          <div class="property">Lugar:</div><div class="value">St. Louis, EEUU. (On-line)</div>
+          <div class="property">Fecha:</div><div class="value">15 de septiembre del 2022</div>
+        </div>-->
 
          <span id="teatroespanolaparis_espectaculo"></span>
          <br/><div class="cv">
-         <div class="year">
-           <h4>2022</h4>
-         </div><div class="title">
+         <div class="year"></div><div class="title">
          <h4>&emsp;<a href="../teatroespanolaparis2022.html">dramaTOURgia: un viaje teatral a trav&eacute;s de Espa&ntilde;a</a><span style="float:right;"><a href="../teatroespanolaparis2022.html">P&aacute;gina Web</a></span></h4></div>
            <div class="property">Descripci&oacute;n:</div><div class="value">Representación de final de curso de <i>Teatro Espa&ntilde;ol &agrave; Paris</i> con las escenas trabajadas durante el a&ntilde;o</div>
            <div class="property">Directora:</div><div class="value">Luz&iacute;a Eviza</div>
@@ -2700,7 +2781,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
           <span id="teatroespanolaparis"></span>
           <br/><div class="cv">
-          <div class="year"></div><div class="title">
+          <div class="year">
+          <h4>2020-22</h4>
+          </div><div class="title">
           <h4>&emsp;<a href="https://www.facebook.com/teatroespanolaparis">Teatro Espa&ntilde;ol &agrave; Paris</a></h4></div>
             <div class="property">Descripci&oacute;n:</div><div class="value">Clases semanales de teatro en español</div>
             <div class="property">Instructora:</div><div class="value">Luz&iacute;a Eviza</div>
@@ -2718,6 +2801,15 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
              <div class="property">Instituci&oacute;n anfitriona::</div><div class="value"><a href="https://en.uit.no/">UiT The Artic University of Norway</a></div>
              <div class="property">Lugar:</div><div class="value">Troms&oslash;, Noruega</div>
              <div class="property">Fecha:</div><div class="value">del 8 al 10 de junio del 2022</div>
+           </div>
+
+           <br/><div class="cv">
+           <div class="year"></div><div class="title">
+           <h4>&emsp;Taller &ldquo;Bater&iacute;as: Presente y Futuro&rdquo;</h4></div>
+             <div class="property">Organizador:</div><div class="value"><a href="https://www.ehu.eus/es/web/ehualumni">EHUalumni</a></div>
+             <div class="property">Ponente:</div><div class="value"><a href="https://cicenergigune.com/en/jon-serrano-sevillano">Jon Serrano-Sevillano</a></div>
+             <div class="property">Lugar:</div><div class="value">On-line</div>
+             <div class="property">Fecha:</div><div class="value">11 de mayo del 2022</div>
            </div>
 
       <!-- 2021
