--- a/cv.html
+++ b/cv.html
@@ -552,7 +552,12 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;A Geometric Summation of the Geometric Series<a class="btn btn-hal" href="https://hal.inria.fr/hal-03779492" role="button">hal-03779492</a></h4></div>
+       <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. A Geometric Summation of the Geometric Series, <i>The American Mathematical Monthly</i>, 2022. <span><a href="https://doi.org/10.1080/00029890.2022.2115825">DOI 10.1080/00029890.2022.2115825</a></span> <span><a style="color:#FF69B4;" href="../papers/A_Geometric_Summation_of_the_Geometric_Series_AM.pdf">[AM for downloading]</a></span></div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
        <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
        <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
