--- a/cv.html
+++ b/cv.html
@@ -558,7 +558,7 @@
 
       <br/><div class="cv">
       <div class="year"></div><div class="paper"><h4>&emsp;On the Complexity of the Plantinga-Vegter Algorithm<a class="btn btn-arxiv" href="https://arxiv.org/abs/2004.06879" role="button">arXiv:2004.06879</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
+       <div class="pretalktitle"></div><div class="collaborator">A.A. Erg&uuml;r, F. Cucker and J. Tonelli-Cueto. On the Complexity of the Plantinga-Vegter Algorithm, <i>Discrete & Computational Geometry</i>, 68(3):664–708, 2022. <!--First on-line: January 2021.--> <span><a href="https://doi.org/10.1007/s00454-022-00403-x">DOI 10.1007/s00454-022-00403-x</a></span> <span><a style="color:#FF69B4;" href="https://rdcu.be/cUAbS">[SharedIt LINK]</a></span></div>
        <div class="pretalktitle"></div><div class="collaborator">Journal version of <em>Plantinga-Vegter algorithm takes average polynomial time</em>.</div>
       </div>
 
