--- a/research.html
+++ b/research.html
@@ -310,6 +310,10 @@
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
+    x = document.getElementsByClassName("btn btn-hal");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
     x = document.getElementsByClassName("btn btn-phd");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
