--- a/cv_es.html
+++ b/cv_es.html
@@ -160,7 +160,7 @@
       <div class="year"><h4>2022-23</h4></div><div class="title"><h4>&emsp;Postdoc en <a href="https://www.utsa.edu/">The University of Texas at San Antonio</a></h4></div>
         <div class="property">Mentor:</div><div class="value"> <a href="https://alpergur.xyz/">Alperen A. Erg&uuml;r</a></div>
         <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.utsa.edu/">The University of Texas at San Antonio (UTSA)</a></div>
-        <div class="property">Duraci&oacute;n:</div><div class="value">September 2022 - August 2023</div>
+        <div class="property">Duraci&oacute;n:</div><div class="value">septiembre 2022 - agosto 2023</div>
       </div>
 
       <br/><div class="cv">
