--- a/cv.html
+++ b/cv.html
@@ -1584,10 +1584,12 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <h4>&emsp;Referee/Reviewer</h4></div>
 <div class="year"></div><div class="title">
 &ensp;&emsp;<em>(Current and past reviews in alphabetical order)</em></div>
-  <div class="property">Journal:</div><div class="value"><a href="https://www.journals.elsevier.com/journal-of-complexity">Journal of Complexity</a></div>
-  <div class="property"></div><div class="value"><a href="https://www.ams.org/publications/journals/journalsframework/mcom">Mathematics of Computation</a></div>
+  <div class="property">Journal:</div><div class="value"><a href="https://www.springer.com/journal/10472">Annals of Mathematics and Artificial Intelligence</a></div>
   <div class="property"></div><div class="value"><a href="https://www.cambridge.org/core/journals/forum-of-mathematics-sigma">Forum of Mathematics, Sigma</a></div>
   <div class="property"></div><div class="value"><a href="https://www.springer.com/journal/10208">Foundations of Computational Mathematics</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.journals.elsevier.com/journal-of-complexity">Journal of Complexity</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.ams.org/publications/journals/journalsframework/mcom">Mathematics of Computation</a></div>
+  <div class="property"></div><div class="value"><a href="https://www.siam.org/publications/journals/siam-journal-on-applied-algebra-and-geometry-siaga">SIAM Journal on Applied Algebra and Geometry (SIAGA)</a></div>
   <div class="property">Conference:</div><div class="value"><a href=#ISSAC2020>ISSAC2020</a></div>
   <div class="property"></div><div class="value"><a href=#MEGA2019>MEGA2019</a></div>
   <div class="property">Other:</div><div class="value"><a href="https://mathscinet.ams.org/">MathSciNet</a></div>
