--- a/contact.html
+++ b/contact.html
@@ -92,24 +92,23 @@
  <div class="row">
   <div class="col-md-4" style="padding-top:1em;">
 <h3>&ensp;</h3><p></p>
-    
+
 <img src="imgs/contact2.jpg" alt="Josu&eacute; Tonelli-Cueto somewhere in Venice" style="width:94%;">
-   
+
 <p align="center" style="font-size:x-small;">In front of a gold leafed wall in Venezia.</p>
   </div>
   <div class="col-md-4" style="padding-top:1em;">
      <h3>Dr. Josu&eacute; Tonelli-Cueto</h3>
 <p></p>
      <p style="text-align:left;">
-<b>Institut de Mathematiques de Jussieu<br/> - Paris Rive Gauche</b><br/>
-Sorbonne Universit&eacute;<br/> - Campus Pierre et Marie Curie<br/>
-Boite Courrier 247<br/>
-4, place Jussieu<br/>
-75252 Paris Cedex 05<br/>
-FRANCE
+Department of Mathematics<br/>
+<b>The University of Texas at San Antonio</b><br/>
+One UTSA Circle<br/>
+San Antonio, Texas 78249<br/>
+USA
 </p>
 <p align="left">
-Room 15-16.414
+TOBEUPDATED (office)
 </p>
 
 <!--Place the code below where you want the link to be displayed-->
@@ -164,7 +163,7 @@ TOBEUPDATED (phone)
     <!-- For phone -->
     <script type="text/javascript">
     <!--
-    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz><oe/><rz>wbfhr.gbaryyv-phrgb(NG)vaevn.se</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
+    document.getElementById("obf").innerHTML="<rz>wbfhr.gbaryyv.phrgb(NG)ovmxnvn.rh</rz><oe/><rz>wbfhr.gbaryyv-phrgb(NG)hgfn.rqh</rz>".replace(/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
 
     if (screen.width <= 699) {
     var x;
